--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "next": "^14.2.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-visibility-sensor": "^5.1.1",
+    "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
