--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.13",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-visibility-sensor": "^5.1.1",
     "sweetalert2": "^11.12.2"
   },
@@ -23,7 +25,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "framer-motion": "^11.2.13",
     "postcss": "^8",
     "react-countup": "^6.5.3",
     "react-icons": "^5.2.1",
