--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.13",
+    "mongodb": "^6.8.0",
     "next": "^14.2.4",
     "next-seo": "^6.5.0",
     "react": "^18.3.1",
